# ChangeLog for net-wireless/bluez
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez/ChangeLog,v 1.7 2009/04/07 09:03:39 dev-zero Exp $

*bluez-4.34 (07 Apr 2009)

  07 Apr 2009; Tiziano Müller <dev-zero@gentoo.org>
  +files/4.34-conditional_libsbc.patch, +bluez-4.34.ebuild:
  Version bump, fixed build problems with --disable{alsa,gstreamer}. Bug
  #260374 has already been solved in an earlier bump.

  10 Mar 2009; Tiziano Müller <dev-zero@gentoo.org> bluez-4.32.ebuild:
  Added pambase[consolekit] to RDEPEND to get at least the basics ready
  needed to run bluez as user.

*bluez-4.32 (04 Mar 2009)

  04 Mar 2009; Tiziano Müller <dev-zero@gentoo.org> -bluez-4.31.ebuild,
  +bluez-4.32.ebuild:
  Version bump (fixes memory leaks and segfaults). Dropping old.

*bluez-4.31 (27 Feb 2009)

  27 Feb 2009; Tiziano Müller <dev-zero@gentoo.org>
  +files/4.31-as_needed.patch, +bluez-4.31.ebuild:
  Version bump.

*bluez-4.28 (06 Feb 2009)

  06 Feb 2009; Tiziano Müller <dev-zero@gentoo.org> +bluez-4.28.ebuild:
  Version bump.

*bluez-4.21 (04 Dec 2008)

  04 Dec 2008; Tiziano Müller <dev-zero@gentoo.org> -bluez-4.19.ebuild,
  +bluez-4.21.ebuild:
  Version bump

*bluez-4.19 (28 Nov 2008)

  28 Nov 2008; Tiziano Müller <dev-zero@gentoo.org>
  +files/bluez-4.18-udev.rules, +files/4.18/bluetooth-conf.d,
  +files/4.18/conf.d-hidd, +files/bluez-4.18-udev.script,
  +files/4.18/bluetooth-init.d, +files/4.18/cups-location.patch,
  +files/4.18/init.d-hidd, +metadata.xml, +bluez-4.19.ebuild:
  Initial commit, keeping the keywords the same as for bluez-libs/-utils
  since it's mostly the same. Most patches are taken from bluez-libs/-utils.
  (bug #236357)
